[package]
name = "qafs"
version = "0.0.1"
authors = ["Shiv Shankar Dayal <shivshankar.dayal@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://docs.rs/vergen/4.1.0/vergen/
[build-dependencies]
vergen = { version = "7.5.1", features = [ "git" ] }

[features]
default = ["postgres"]
postgres = ["sqlx/postgres"]

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [ "runtime-actix-rustls", "macros", "chrono", "decimal", "uuid", "json", "time" ]
# git = "https://github.com/launchbadge/sqlx"
# path = "../sqlx"

[dependencies]
clap =  { version = "4.1.11", features = [ "derive" ] }
lettre = { version = "0.10.3", features = ["tokio1-native-tls", "hostname", "builder"] }
tokio = { version = "1.26.0", features = ["full"] } # copy from actix-rt
nonblock-logger = { version = "0.2.2", default-features = false, features = ["color", "dbg"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
chrono =  { version = "0.4.23", features = ["serde"] }
rust_decimal = { version = "1.29.0", features = [ "serde-float" ] }
validator = { version = "0.15.0", features = ["derive"] }
serde = { version = "1.0.157", features = ["derive"] }
serde_qs = "0.12"
serde_json = "1.0.94"
json5 = "0.4.1"
ring = "0.16.20"
rust-argon2 = "1.0.0"
hex = "0.4.3"
jsonwebtoken = "8.3.0"
mobc-redis = "0.8.0"
mobc = "0.8.1"
actix-web = "4.3.0"
actix-files = "0.6.2"
actix-rt = "2.8.0"
lazy_static = "1.4.0"
async-trait = "0.1.67"
futures = "0.3.27"
thiserror = "1.0.40"
anyhow = "1.0.40"
url = "2.3.1"
itsdangerous = "0.4.1"
md5 = "0.7.0"
num_cpus = "1.15.0"
cargo-watch = "8.4.0"
